--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,13 +6,13 @@ date: 2021-03-19
 
 # Andresromero.dev
 
-Hey 👋, I'm Andrés I'm a Senior Software Engineer at [Lunchbox](https://www.lunchboxentertainment.com). I'm part of the Game Services team where we're building the future of competitive gaming with [Sirocco](https://siroccogame.io).
+Hey 👋, I'm Andrés I'm a Senior Software Engineer at [Lunchbox](https://www.lunchboxentertainment.com). I'm part of the Game Services team where we're building the future of competitive gaming with [Sirocco](https://siroccogame.io). 🎮
 
-From coding to leading, I've got the full stack covered - take a dive into my profile and let's talks about that game-changing project you have in mind.
+From coding to leading, I've got the full stack covered - take a dive into my profile and let's talk about that groundbreaking idea you have in mind. 🧠
 
 ---
 
-- Twitter [@yourname](https://twitter.com/yourname)
-- GitHub [@yourname](https://github.com/yourname)
-- Instagram [@yourname](https://instagram.com/yourname)
-- Email your@name.com
+- GitHub [@andresromeroh](https://github.com/andresromeroh)
+- Twitter [@andresromeroh_](https://twitter.com/andresromeroh_)
+- Instagram [@_andres.romero](https://instagram.com/yourname)
+- Email hello@andresromero.dev
