chore(mdx): remove any from /uses

--- a/pages/uses.mdx
+++ b/pages/uses.mdx
@@ -24,4 +24,4 @@ Here's a brief rundown of the hardware and software I rely on daily.
 * When it comes to managing my to-dos and project notes, I rely on [Notion](https://www.notion.so) to keep everything organized.
 * I use [Brave](https://brave.com/) as my main browser, it keeps ADs and Spam away with zero config.
 * [PopSQL](https://popsql.com/) is the IDE I use for working with relational databases.
-* And last but not least I use [Postman](https://www.postman.com/) for any API testing from REST, to GraphQL and gRPC.
+* And last but not least I use [Postman](https://www.postman.com/) for API testing from REST, to GraphQL and gRPC.
