--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -3,3 +3,34 @@ type: page
 title: Projects
 date: 2021-03-19
 ---
+
+# Projects
+
+Explore a selection of some of the projects I've worked on. Please note that not all of my work is featured here due to confidentiality.
+
+import Image from 'next/image'
+
+### [aguinaldo.andresromero.dev](https://aguinaldo.andresromero.dev/)
+An easy way to estimate your Christmas bonus in Costa Rica! Simply enter your monthly salary, and the calculator will do the rest, giving you an accurate estimate of how much you can expect to receive as your aguinaldo.
+<br/>
+<Image
+  src="/images/aguinaldocr.jpg"
+  alt="Photo"
+  width={900}
+  height={525}
+  priority
+  className="next-image"
+/>
+
+### [iccha-technologies.com](https://www.iccha-technologies.com/)
+A custom-built website for ICCHA Technologies, a software services provider based in Switzerland.
+I worked worked closely with ICCHA to design a website that reflects their commitment to quality, reliability, and innovation. 
+<br/>
+<Image
+  src="/images/icchasite.jpg"
+  alt="Photo"
+  width={900}
+  height={575}
+  priority
+  className="next-image"
+/>
