feat(emojis): some more emojis for about page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,7 +12,7 @@ From coding to leading, I've got the full stack covered - take a dive into my pr
 
 ---
 
-- GitHub [@andresromeroh](https://github.com/andresromeroh)
-- Twitter [@andresromeroh_](https://twitter.com/andresromeroh_)
-- Instagram [@_andres.romero](https://instagram.com/yourname)
-- Email hello@andresromero.dev
+- 😼GitHub [@andresromeroh](https://github.com/andresromeroh)
+- 🐦Twitter [@andresromeroh_](https://twitter.com/andresromeroh_)
+- 📸Instagram [@_andres.romero](https://instagram.com/yourname)
+- ✉️Email hello@andresromero.dev
