chore(mdx): some updates to about page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,7 +6,7 @@ date: 2021-03-19
 
 # Andresromero.dev
 
-Hey 👋, I'm Andrés I'm a Senior Software Engineer at [Lunchbox](https://www.lunchboxentertainment.com). I'm part of the Game Services team where we're building the future of competitive gaming with [Sirocco](https://siroccogame.io). 🎮
+Hey 👋, I'm Andrés I'm a Senior Software Engineer at [Lunchbox](https://www.lunchboxentertainment.com) where I'm currently part of the Game Services team where we're building the future of competitive gaming with [Sirocco](https://siroccogame.io). 🎮
 
 From coding to leading, I've got the full stack covered - take a dive into my profile and let's talk about that groundbreaking idea you have in mind. 🧠
 
