fix(typos): fix some typos on different places

--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -6,6 +6,6 @@ date: 2021-03-18
 
 # Photos
 
-A visual journey through the places I've traveled to, it's small collection of pictures capturing the beauty of different landscapes from around the world.
+A visual journey through the places I've traveled to, it's a small collection of pictures capturing the beauty of different landscapes from around the world.
 
 import Image from 'next/image'
