--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -24,7 +24,7 @@ An easy way to estimate your Christmas bonus in Costa Rica! Simply enter your mo
 
 ### [iccha-technologies.com](https://www.iccha-technologies.com/)
 A custom-built website for ICCHA Technologies, a software services provider based in Switzerland.
-I worked worked closely with ICCHA to design a website that reflects their commitment to quality, reliability, and innovation. 
+I worked closely with ICCHA to design a website that reflects their commitment to quality, reliability, and innovation. 
 <br/>
 <Image
   src="/images/icchasite.jpg"
