--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,9 +4,9 @@ title: About
 date: 2021-03-19
 ---
 
-# Andresromero.dev
+# {"</>"} Andresromero.dev
 
-Hey 👋, I'm Andrés I'm a Senior Software Engineer at [Lunchbox](https://www.lunchboxentertainment.com) where I'm currently part of the Game Services team building the future of competitive gaming with [Sirocco](https://siroccogame.io). 🎮
+Hey 👋, I'm Andrés I'm a Software Engineer working at [Lunchbox](https://www.lunchboxentertainment.com) where I'm part of the Game Services team building the future of competitive gaming with [Sirocco](https://siroccogame.io). 🎮
 
 From coding to leading, I've got the full stack covered - take a dive into my profile and let's talk about that groundbreaking idea you have in mind. 🧠
 
