--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -14,5 +14,4 @@ From coding to leading, I've got the full stack covered - take a dive into my pr
 
 - 🐈 GitHub [@andresromeroh](https://github.com/andresromeroh)
 - 🐦 Twitter [@andresromeroh_](https://twitter.com/andresromeroh_)
-- 📸 Instagram [@_andres.romero](https://instagram.com/yourname)
-- ✉️ Email hello@andresromero.dev
+- 🌐 LinkedIn [@andresromeroh](https://www.linkedin.com/in/andresromeroh/)
