--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -9,3 +9,33 @@ date: 2021-03-18
 A visual journey through the places I've traveled to, it's a small collection of pictures capturing the beauty of different landscapes from around the world.
 
 import Image from 'next/image'
+
+<Image
+  src="/images/zermatt.jpg"
+  alt="Photo"
+  width={1125}
+  height={750}
+  priority
+  className="next-image"
+/>
+_Zermatt, southern Switzerland_
+
+<Image
+  src="/images/horseshoe.jpg"
+  alt="Photo"
+  width={1125}
+  height={750}
+  priority
+  className="next-image"
+/>
+_Horseshoe Bend, Arizona, United States_
+
+<Image
+  src="/images/colosseum.jpg"
+  alt="Photo"
+  width={1125}
+  height={750}
+  priority
+  className="next-image"
+/>
+_Colosseum, Rome, Italy_
