fix(photos): add punctuation

--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -18,7 +18,7 @@ import Image from 'next/image'
   priority
   className="next-image"
 />
-_Zermatt, southern Switzerland_
+_Zermatt, Southern Switzerland._
 
 <Image
   src="/images/horseshoe.jpg"
@@ -28,7 +28,7 @@ _Zermatt, southern Switzerland_
   priority
   className="next-image"
 />
-_Horseshoe Bend, Arizona, United States_
+_Horseshoe Bend, Arizona, United States._
 
 <Image
   src="/images/colosseum.jpg"
@@ -38,4 +38,4 @@ _Horseshoe Bend, Arizona, United States_
   priority
   className="next-image"
 />
-_Colosseum, Rome, Italy_
+_Colosseum, Rome, Italy._
