--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -38,4 +38,4 @@ _Horseshoe Bend, Arizona, United States._
   priority
   className="next-image"
 />
-_Colosseum, Centre of the City of Rome, Italy._
+_Colosseum, City of Rome, Italy._
