chore(js): add credly and minor fixes

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,6 +12,6 @@ From coding to leading, I've got the full stack covered - take a dive into my pr
 
 ---
 
+- 🏅 Credly [@andresromeroh](https://www.credly.com/users/andresromeroh/badges)
 - 🐈 GitHub [@andresromeroh](https://github.com/andresromeroh)
-- 🐦 Twitter [@andresromeroh_](https://twitter.com/andresromeroh_)
 - 🌐 LinkedIn [@andresromeroh](https://www.linkedin.com/in/andresromeroh/)
