feat(mdx): update home page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,17 +1,24 @@
 ---
 type: page
-title: About
+title: Home
 date: 2021-03-19
 ---
 
 # {"</>"} Andresromero.dev
 
-Hey 👋, I'm Andrés I'm a Software Engineer working at [Lunchbox](https://www.lunchboxentertainment.com) where I'm part of the Game Services team building the future of competitive gaming. 🎮
+## Hey, I'm Andrés 👋
 
-From coding to leading, I've got the full stack covered - take a dive into my profile and let's talk about that groundbreaking idea you have in mind. 🧠
+I'm a Software Engineer from Costa Rica.🌴 
+I currently work at [Lunchbox](https://www.lunchboxentertainment.com) where I'm part of the Game Services team building the future of competitive gaming with a revolutionary new (MOBA)[https://en.wikipedia.org/wiki/Multiplayer_online_battle_arena]. 🎮
+
+From coding to leading, I've got the full stack covered, take a dive into my profile and let's talk about that groundbreaking idea you have in mind. 🧠
 
 ---
+### Latest Blog Post 📝
+[Containers and Serverless - Amplifying AWS Lambda with Docker Layers](https://www.andresromero.dev/posts/containers-and-serverless)
 
-- 🏆 Credly [@andresromeroh](https://www.credly.com/users/andresromeroh/badges)
+---
+### Let's Stay in Touch! Find Me on Social Media 🌐
+
 - 🐙 GitHub [@andresromeroh](https://github.com/andresromeroh)
-- 🌐 LinkedIn [@andresromeroh](https://www.linkedin.com/in/andresromeroh/)
+- 💼 LinkedIn [@andresromeroh](https://www.linkedin.com/in/andresromeroh)
