fix(mdx): fix home page link

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -9,12 +9,12 @@ date: 2021-03-19
 ## Hey, I'm Andrés 👋
 
 I'm a Software Engineer from Costa Rica.🌴 
-I currently work at [Lunchbox](https://www.lunchboxentertainment.com) where I'm part of the Game Services team building the future of competitive gaming with a revolutionary new (MOBA)[https://en.wikipedia.org/wiki/Multiplayer_online_battle_arena]. 🎮
+I currently work at [Lunchbox](https://www.lunchboxentertainment.com) where I'm part of the Game Services team building the future of competitive gaming with a revolutionary new [MOBA](https://en.wikipedia.org/wiki/Multiplayer_online_battle_arena). 🎮
 
 From coding to leading, I've got the full stack covered, take a dive into my profile and let's talk about that groundbreaking idea you have in mind. 🧠
 
 ---
-### Latest Blog Post 📝
+### Latest Blog Posts 📝
 [Containers and Serverless - Amplifying AWS Lambda with Docker Layers](https://www.andresromero.dev/posts/containers-and-serverless)
 
 ---
