--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,7 +11,7 @@ date: 2021-03-19
 I'm a Software Engineer from Costa Rica.🌴 
 I currently work at [Lunchbox](https://www.lunchboxentertainment.com) where I'm part of the Game Services team building the future of competitive gaming with a revolutionary new [MOBA](https://en.wikipedia.org/wiki/Multiplayer_online_battle_arena). 🎮
 
-From coding to leading, I've got the full stack covered, take a dive into my profile and let's talk about that groundbreaking idea you have in mind. 🧠
+From coding to leading, I've got the full stack covered - take a dive into my profile and let's talk about that groundbreaking idea you have in mind. 🧠
 
 ---
 ### Latest Blog Posts 📝
