chore(mdx): remove "s"

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -14,7 +14,7 @@ I currently work at [Lunchbox](https://www.lunchboxentertainment.com) where I'm 
 From coding to leading, I've got the full stack covered - take a dive into my profile and let's talk about that groundbreaking idea you have in mind. 🧠
 
 ---
-### Latest Blog Posts 📝
+### Latest Blog Post 📝
 [Containers and Serverless - Amplifying AWS Lambda with Docker Layers](https://www.andresromero.dev/posts/containers-and-serverless)
 
 ---
