feat(mdx): update /uses

--- a/pages/uses.mdx
+++ b/pages/uses.mdx
@@ -10,7 +10,7 @@ Here's a brief rundown of the hardware and software I rely on daily.
 
 ## Hardware
 * [2022 Dell XPS 15](https://www.dell.com/en-us/shop/dell-laptops/xps-15-laptop/spd/xps-15-9520-laptop/ctox15w11p1c4002) (Intel 12th Gen i7, 32GB DDR5 RAM, 1TB SSD, GeForce RTX 3050)
-* [AOC 34" Curved Frameless Immersive Monitor](https://www.amazon.com/gp/product/B07ZB2TNZZ/ref=ppx_yo_dt_b_search_asin_image?ie=UTF8&th=1), UltraWide (QHD 3440x1440)
+* [AOC 34" Curved Frameless Monitor](https://www.amazon.com/gp/product/B07ZB2TNZZ/ref=ppx_yo_dt_b_search_asin_image?ie=UTF8&th=1), UltraWide (QHD 3440x1440)
 * [3rd Generation Apple Airpods](https://www.amazon.com/Apple-Generation-Lightning-Resistant-Headphones/dp/B0BDHB9Y8H/ref=sr_1_1_sspa?keywords=airpods&s=electronics&sr=1-1-spons&ufe=app_do%3Aamzn1.fos.f5122f16-c3e8-4386-bf32-63e904010ad0&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEyTjhDREJNTlNRUUlVJmVuY3J5cHRlZElkPUEwNjUyNjUwWFhKWlNLMkZJTlpJJmVuY3J5cHRlZEFkSWQ9QTAxMDQwMTMyRTZMNkRBOEc2Q0pWJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==) Wireless Buds
 * [6th Generation iPad Mini](https://www.apple.com/shop/buy-ipad/ipad-mini) 256GB
 * [Anker PowerCast M300](https://www.amazon.com/gp/product/B09J53TB27/ref=ppx_yo_dt_b_search_asin_image?ie=UTF8&psc=1) Microphone
@@ -19,9 +19,9 @@ Here's a brief rundown of the hardware and software I rely on daily.
 * [IQUNIX L80](https://iqunix.store/products/iqunix-l80-formula-typing-wireless-mechanical-keyboard?variant=32620690178108) Wireless Mechanical Keyboard
 
 ## Software
-* I use [VS Code](https://code.visualstudio.com/) for coding in JavaScript, Python, C# and Terraform. Lately I've been working with Kotlin and for that I rely on [JetBrains Fleet](https://www.jetbrains.com/fleet/), really promising editor.
+* I use [VS Code](https://code.visualstudio.com/) for coding in JavaScript, Python and Terraform. Lately I've been working with Kotlin and for that I rely on [JetBrains Fleet](https://www.jetbrains.com/fleet/), really promising editor.
 * The new [Windows Terminal](https://github.com/microsoft/terminal) is my terminal of preferrence, it has become really good and give me the best of both worlds (Windows + Linux) with WSL.
 * When it comes to managing my to-dos and project notes, I rely on [Notion](https://www.notion.so) to keep everything organized.
 * I use [Brave](https://brave.com/) as my main browser, it keeps ADs and Spam away with zero config.
-* [PopSQL](https://popsql.com/) is the IDE I use for working with relational databases.
+* [DBeaver](https://github.com/dbeaver/dbeaver) is the tool I use for working with relational databases.
 * And last but not least I use [Postman](https://www.postman.com/) for API testing from REST, to GraphQL and gRPC.
