feat(mdx): add instagram

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -22,3 +22,4 @@ From coding to leading, I've got the full stack covered - take a dive into my pr
 
 - 🐙 GitHub [@andresromeroh](https://github.com/andresromeroh)
 - 💼 LinkedIn [@andresromeroh](https://www.linkedin.com/in/andresromeroh)
+- 📷 Instagram [@_andres.romero](https://www.instagram.com/_andres.romero)
