--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,7 @@
 ---
 type: page
 title: Home
-date: 2021-03-19
+date: 2023-01-01
 ---
 
 # {"</>"} Andresromero.dev
@@ -18,7 +18,7 @@ From coding to leading, I've got the full stack covered - take a dive into my pr
 [Containers and Serverless - Amplifying AWS Lambda with Docker Layers](https://www.andresromero.dev/posts/containers-and-serverless)
 
 ---
-### Let's Stay in Touch! Find Me on Social Media 🌐
+### Stay in Touch! Find Me on Social Media 🌐
 
 - 🐙 GitHub [@andresromeroh](https://github.com/andresromeroh)
 - 💼 LinkedIn [@andresromeroh](https://www.linkedin.com/in/andresromeroh)
