chore(mdx): update main page links

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -20,6 +20,6 @@ From coding to leading, I've got the full stack covered - take a dive into my pr
 ---
 ### Stay in Touch! Find Me on Social Media 🌐
 
-- 🐙 GitHub [@andresromeroh](https://github.com/andresromeroh)
-- 💼 LinkedIn [@andresromeroh](https://www.linkedin.com/in/andresromeroh)
-- 📷 Instagram [@_andres.romero](https://www.instagram.com/_andres.romero)
+- 🐙 GitHub [@andresromerodev](https://github.com/andresromerodev)
+- 💼 LinkedIn [@andresromerodev](https://www.linkedin.com/in/andresromerodev)
+- 🐦 Twitter (X) [@andresromerodev](https://www.x.com/andresromerodev)
