chore(mdx): update uses.mdx

--- a/pages/uses.mdx
+++ b/pages/uses.mdx
@@ -19,7 +19,7 @@ Here's a brief rundown of the hardware and software I rely on daily.
 * [IQUNIX L80](https://iqunix.store/products/iqunix-l80-formula-typing-wireless-mechanical-keyboard?variant=32620690178108) Wireless Mechanical Keyboard
 
 ## Software
-* I use [VS Code](https://code.visualstudio.com/) for coding in JavaScript, Python and Terraform. Lately I've been working with Kotlin and for that I rely on [JetBrains Fleet](https://www.jetbrains.com/fleet/), really promising editor.
+* I use [VS Code](https://code.visualstudio.com/) for coding in JavaScript, Python, Go and Terraform.
 * The new [Windows Terminal](https://github.com/microsoft/terminal) is my terminal of preferrence, it has become really good and give me the best of both worlds (Windows + Linux) with WSL.
 * When it comes to managing my to-dos and project notes, I rely on [Notion](https://www.notion.so) to keep everything organized.
 * I use [Brave](https://brave.com/) as my main browser, it keeps ADs and Spam away with zero config.
