styles(mdx): capitalize resume

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,7 +11,7 @@ date: 2023-01-05
 I'm a Software Engineer from Costa Rica.🌴 
 I currently work at [Lunchbox](https://www.lunchboxentertainment.com) where I'm part of the Game Services team building the future of competitive gaming with a revolutionary new [MOBA](https://en.wikipedia.org/wiki/Multiplayer_online_battle_arena). 🎮
 
-From coding to leading, I've got the full stack covered - take a dive into my [resume](https://andresromerodev.notion.site/andresromerodev/Andr-s-Romero-1c7e5808a418431b8df0dd4fa63c25ba) and let's discuss that groundbreaking idea you have in mind. 🧠
+From coding to leading, I've got the full stack covered - take a dive into my [Resume](https://andresromerodev.notion.site/andresromerodev/Andr-s-Romero-1c7e5808a418431b8df0dd4fa63c25ba) and let's discuss that groundbreaking idea you have in mind. 🧠
 
 ---
 ### Latest Blog Post 📝
