revert(mdx): reverting previous changes

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -9,9 +9,9 @@ date: 2023-01-05
 ## Hey, I'm Andrés 👋
 
 I'm a Software Engineer from Costa Rica.🌴 
-I currently work at [Lunchbox](https://www.lunchboxentertainment.com){:target="_blank"} where I'm part of the Online Services team building the future of competitive gaming with a revolutionary new [MOBA](https://en.wikipedia.org/wiki/Multiplayer_online_battle_arena){:target="_blank"}. 🎮
+I currently work at [Lunchbox](https://www.lunchboxentertainment.com) where I'm part of the Online Services team building the future of competitive gaming with a revolutionary new [MOBA](https://en.wikipedia.org/wiki/Multiplayer_online_battle_arena). 🎮
 
-From coding to leading, I've got the full stack covered - take a dive into my [Resume](https://andresromerodev.notion.site/andresromerodev/Andr-s-Romero-1c7e5808a418431b8df0dd4fa63c25ba){:target="_blank"} and let's discuss that groundbreaking idea you have in mind. 🧠
+From coding to leading, I've got the full stack covered - take a dive into my [Resume](https://andresromerodev.notion.site/andresromerodev/Andr-s-Romero-1c7e5808a418431b8df0dd4fa63c25ba) and let's discuss that groundbreaking idea you have in mind. 🧠
 
 ---
 ### Latest Blog Post 📝
@@ -20,6 +20,6 @@ From coding to leading, I've got the full stack covered - take a dive into my [R
 ---
 ### Stay in Touch! Find Me on Social Media 🌐
 
-- 🐙 GitHub [@andresromerodev](https://github.com/andresromerodev){:target="_blank"}
-- 💼 LinkedIn [@andresromerodev](https://www.linkedin.com/in/andresromerodev){:target="_blank"}
-- 🐦 Twitter (X) [@andresromerodev](https://www.x.com/andresromerodev){:target="_blank"}
+- 🐙 GitHub [@andresromerodev](https://github.com/andresromerodev)
+- 💼 LinkedIn [@andresromerodev](https://www.linkedin.com/in/andresromerodev)
+- 🐦 Twitter (X) [@andresromerodev](https://www.x.com/andresromerodev)
