feat(mdx): modify links

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -10,8 +10,8 @@ Explore a selection of some of the projects I've worked on. Please note that not
 
 import Image from 'next/image'
 
-### [Aguinaldo CR](https://aguinaldo.andresromero.dev/)
-An easy way to estimate your Christmas bonus in Costa Rica! Simply enter your monthly salary, and the calculator will do the rest, giving you an accurate estimate of how much you can expect to receive as your aguinaldo.
+### Aguinaldo CR
+An easy way to estimate your Christmas bonus in Costa Rica! Simply enter your monthly salary, and the calculator will do the rest, giving you an accurate estimate of how much you can expect to receive as your aguinaldo. [Link](https://aguinaldo.andresromero.dev/)
 <br/>
 <Image
   src="/images/aguinaldocr.jpg"
@@ -22,9 +22,9 @@ An easy way to estimate your Christmas bonus in Costa Rica! Simply enter your mo
   className="next-image"
 />
 
-### [ICCHA Technologies](https://www.iccha-technologies.com/)
+### ICCHA Technologies Company Website
 A custom-built website for ICCHA Technologies, a software services provider based in Switzerland.
-I worked closely with ICCHA to design a website that reflects their commitment to quality, reliability, and innovation. 
+I worked closely with ICCHA to design a website that reflects their commitment to quality, reliability, and innovation. [Link](https://www.iccha-technologies.com/)
 <br/>
 <Image
   src="/images/icchasite.jpg"
