chore(mdx): remove extra word

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -22,7 +22,7 @@ An easy way to estimate your Christmas bonus in Costa Rica! Simply enter your mo
   className="next-image"
 />
 
-### ICCHA Technologies Company Website
+### ICCHA Technologies Website
 A custom-built website for ICCHA Technologies, a software services provider based in Switzerland.
 I worked closely with ICCHA to design a website that reflects their commitment to quality, reliability, and innovation. [Link](https://www.iccha-technologies.com/)
 <br/>
