--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -10,7 +10,7 @@ Explore a selection of some of the projects I've worked on. Please note that not
 
 import Image from 'next/image'
 
-### Aguinaldo CR
+### Aguinaldo CR Website
 An easy way to estimate your Christmas bonus in Costa Rica! Simply enter your monthly salary, and the calculator will do the rest, giving you an accurate estimate of how much you can expect to receive as your aguinaldo. [Link](https://aguinaldo.andresromero.dev/)
 <br/>
 <Image
