feat(mdx): minor updates

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -10,7 +10,7 @@ Explore a selection of some of the projects I've worked on. Please note that not
 
 import Image from 'next/image'
 
-### Aguinaldo CR Website
+### Aguinaldo CR
 An easy way to estimate your Christmas bonus in Costa Rica! Simply enter your monthly salary, and the calculator will do the rest, giving you an accurate estimate of how much you can expect to receive as your aguinaldo. [Link](https://aguinaldo.andresromero.dev/)
 <br/>
 <Image
@@ -22,7 +22,7 @@ An easy way to estimate your Christmas bonus in Costa Rica! Simply enter your mo
   className="next-image"
 />
 
-### ICCHA Technologies Website
+### ICCHA Technologies
 A custom-built website for ICCHA Technologies, a software services provider based in Switzerland.
 I worked closely with ICCHA to design a website that reflects their commitment to quality, reliability, and innovation. [Link](https://www.iccha-technologies.com/)
 <br/>
