--- a/pages/uses.mdx
+++ b/pages/uses.mdx
@@ -9,7 +9,7 @@ date: 2023-01-03
 Here's a brief rundown of the hardware and software I rely on daily.
 
 ## Hardware
-* [2022 Dell XPS 15](https://www.dell.com/en-us/shop/dell-laptops/xps-15-laptop/spd/xps-15-9520-laptop/ctox15w11p1c4002) (Intel 12th Gen i7, 32GB DDR5 RAM, 1TB SSD, GeForce RTX 3050)
+* [Dell XPS 15](https://www.dell.com/en-us/shop/dell-laptops/xps-15-laptop/spd/xps-15-9520-laptop/ctox15w11p1c4002) (Intel 12th Gen i7, 64GB DDR5 RAM, 3TB SSD, GeForce RTX 3050)
 * [AOC 34" Curved UltraWide](https://www.amazon.com/gp/product/B07ZB2TNZZ/ref=ppx_yo_dt_b_search_asin_image?ie=UTF8&th=1) Monitor (QHD 3440x1440)
 * [3rd Generation Apple Airpods](https://www.amazon.com/Apple-Generation-Lightning-Resistant-Headphones/dp/B0BDHB9Y8H/ref=sr_1_1_sspa?keywords=airpods&s=electronics&sr=1-1-spons&ufe=app_do%3Aamzn1.fos.f5122f16-c3e8-4386-bf32-63e904010ad0&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEyTjhDREJNTlNRUUlVJmVuY3J5cHRlZElkPUEwNjUyNjUwWFhKWlNLMkZJTlpJJmVuY3J5cHRlZEFkSWQ9QTAxMDQwMTMyRTZMNkRBOEc2Q0pWJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==) Wireless Buds
 * [6th Generation iPad Mini](https://www.apple.com/shop/buy-ipad/ipad-mini) 256GB
