feat(md): update projects section

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -10,9 +10,26 @@ Explore a selection of some of the projects I've worked on. Please note that not
 
 import Image from 'next/image'
 
+### ICCHA Technologies
+
+A custom-built website for ICCHA Technologies, a software services provider based in Switzerland.
+I worked closely with ICCHA to design a website that reflects their commitment to quality, reliability, and innovation. [Link](https://www.iccha-technologies.com/)
+
+<br />
+<Image
+  src="/images/icchasite.jpg"
+  alt="Photo"
+  width={850}
+  height={550}
+  priority
+  className="next-image"
+/>
+
 ### Aguinaldo CR
+
 An easy way to estimate your Christmas bonus in Costa Rica! Simply enter your monthly salary, and the calculator will do the rest, giving you an accurate estimate of how much you can expect to receive as your aguinaldo. [Link](https://aguinaldo.andresromero.dev/)
-<br/>
+
+<br />
 <Image
   src="/images/aguinaldocr.jpg"
   alt="Photo"
@@ -22,14 +39,16 @@ An easy way to estimate your Christmas bonus in Costa Rica! Simply enter your mo
   className="next-image"
 />
 
-### ICCHA Technologies
-A custom-built website for ICCHA Technologies, a software services provider based in Switzerland.
-I worked closely with ICCHA to design a website that reflects their commitment to quality, reliability, and innovation. [Link](https://www.iccha-technologies.com/)
-<br/>
+### NovaCrédito
+
+A bespoke website and a fully automated WhatsApp bot developed for NovaCrédito, a financial services provider.
+The website and automated bot enhance user interactions, showcasing NovaCrédito's commitment with their customers. [Link](https://www.novacredito.com/)
+
+<br />
 <Image
-  src="/images/icchasite.jpg"
+  src="/images/novacredito.jpg"
   alt="Photo"
-  width={850}
+  width={750}
   height={550}
   priority
   className="next-image"
