chore(blog): refine blog posts

--- a/pages/uses.mdx
+++ b/pages/uses.mdx
@@ -20,7 +20,7 @@ Here's a brief rundown of the hardware and software I rely on daily.
 
 ## Software
 * I use [VS Code](https://code.visualstudio.com/) for coding in JavaScript, Python, Go and Terraform.
-* The new [Windows Terminal](https://github.com/microsoft/terminal) is my terminal of preferrence, it has become really good and give me the best of both worlds (Windows + Linux) with WSL.
+* The [Windows Terminal](https://github.com/microsoft/terminal) is my terminal of preferrence, it has become really good and give me the best of both worlds (Windows + Linux) with WSL.
 * When it comes to managing my to-dos and project notes, I rely on [Notion](https://www.notion.so) to keep everything organized.
 * I use [Brave](https://brave.com/) as my main browser, it keeps ADs and Spam away with zero config.
 * [DBeaver](https://github.com/dbeaver/dbeaver) is the tool I use for working with relational databases.
