--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,7 +15,7 @@ From coding to leading, I've got the full stack covered - take a dive into my [p
 
 ---
 ### Latest Blog Post 📝
-[Containers and Serverless - Amplifying AWS Lambda with Docker Layers](https://www.andresromero.dev/posts/containers-and-serverless)
+[From Building Business Applications to the Game is Industry](https://www.andresromero.dev/posts/from-building-business-applications-to-the-game-industry)
 
 ---
 ### Stay in Touch! Find Me on Social Media 🌐
