chore(test): adding random code for testing

--- a/pages/posts/my-journey-to-a-static-site.mdx
+++ b/pages/posts/my-journey-to-a-static-site.mdx
@@ -10,6 +10,22 @@ import Image from 'next/image'
 
 # From Full-Stack Overload to Streamlined Simplicity - My Journey to a Static Site
 
+## Test `showLineNumbers` and word highlighting
+
+```scala showLineNumbers {2-4} /println/
+object Hello {
+  def main(args: Array[String]) = {
+    println("hello, world")
+  }
+}
+
+object Hello {
+  def main(args: Array[String]) = {
+    println("hello, world")
+  }
+}
+```
+
 I'm excited to be diving into the world of blogging with my first post, and I've decided to share my thoughts on my website, or rather my second website and why I decided to move away from the old one.
 
 ## What Led Me to Abandon My First Website
