--- a/pages/posts/my-journey-to-a-static-site.mdx
+++ b/pages/posts/my-journey-to-a-static-site.mdx
@@ -12,18 +12,13 @@ import Image from 'next/image'
 
 ## Test `showLineNumbers` and word highlighting
 
-```scala showLineNumbers {2-4} /println/
-object Hello {
-  def main(args: Array[String]) = {
-    println("hello, world")
-  }
-}
 
-object Hello {
-  def main(args: Array[String]) = {
-    println("hello, world")
-  }
-}
+## Test `filename`, line highlighting and empty lines
+
+```js filename="test.js" {1}
+console.log('hello world')
+
+console.log('goodbye world')
 ```
 
 I'm excited to be diving into the world of blogging with my first post, and I've decided to share my thoughts on my website, or rather my second website and why I decided to move away from the old one.
