chore(mdx): update latest post

--- a/pages/posts/from-building-business-applications-to-the-game-industry.mdx
+++ b/pages/posts/from-building-business-applications-to-the-game-industry.mdx
@@ -24,11 +24,11 @@ Immediately after thinking, “This opportunity is not for me,” I received the
 
 What, backend for games? Is that a thing? It is! And it’s a huge part of multiplayer and live service games.
 
-Even though I had decided building games was not my thing back in college, that didn’t change the fact that I was a lifelong gamer. Ever since I can remember, I’ve played video games. My earliest memories involve playing Super Nintendo with my brothers as a child or spending time at my dad’s arcade, where kids would spend hours playing video games. Video games have always been in my life. I was lucky enough that my dad always had connections to get the latest tech stuff before it even arrived in Costa Rica. I was one of the first kids to have both the PlayStation One and PlayStation Two, as well as many other consoles like the Nintendo 64 and Dreamcast. To this day, I've always had video games.
+Even though I had decided building games was not my thing back in college, that didn’t change the fact that I was a lifelong gamer. Ever since I can remember, I’ve played video games. My earliest memories involve playing Super Nintendo with my brothers as a child or spending time at my dad’s arcade, where kids would spend hours playing video games. Video games have always been in my life. I was lucky enough that my dad had some connections to get the latest tech stuff before it arrived in Costa Rica. So very early I got both the PlayStation One and PlayStation Two, as well as many other consoles like the Nintendo 64 and Dreamcast. To this day, I've always had video games.
 
 I’ve played an infinite number of games, but I can tell you the ones I’ve enjoyed the most are the ones I play with friends and family—multiplayer games.
 
-At that moment, everything clicked. All the games I play online: Call of Duty, FIFA, GTA, Fall Guys, Brawlhalla, etc. THEY ALL NEED A backend. Authentication, accounts, parties, player inventory—all these features need a backend system to support them.
+At that moment, everything clicked. All the games I play online: Call of Duty, FIFA, GTA, Fall Guys, Brawlhalla, etc. Thet all need A backend. Authentication, accounts, parties, player inventory—all these features need a backend system to support them.
 
 I didn’t think much about the offer, even though I noticed it was hard to find references about what backend in gaming was all about. So I took the risk. I quit my job and decided to join the company I work for today: Lunchbox Entertainment, a US game studio working on their first title, a MOBA game called Sirocco.
 
