--- a/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
+++ b/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
@@ -1,16 +1,12 @@
 ---
-title: From Building Business Applications to the Game Industry
-date: 2024/6/18
-description: My journey into creating backend systems for multiplayer games.
-tag: Career Development
-author: Andrés Romero
+title: 'From Building Business Applications to the Game Industry'
+publishedAt: '2024-06-18'
+summary: 'My journey into creating backend systems for multiplayer games.'
 ---
 
-# From Building Business Applications to the Game is Industry
+It's been almost 1 year since I made this website and exactly 1.5 years after making one of the riskiest but most rewarding moves in my career as a Software Engineer: joining the Game Industry.
 
-It's been almost 1 year since I made my last post and exactly 1.5 years after making one of the riskiest but most rewarding moves in my career as a Software Engineer: joining the Game Industry.
-
-If you know me or have had the chance to work with me, you know that programming is a little more than a job for me—it’s a passion, a passion for problem solving. This passion quickly turned into a 5+ year career as a programmer.
+If you know me or have had the chance to work with me, you know that I have a passion for coding and problem solving. This passion quickly turned into a 5+ year career as a programmer.
 
 Those years have flown by so quickly. I’ve worked on a wide variety of projects and industries: AI, IoT, B2B, even apps for Restaurants and more. All this was thanks to JavaScript, which will always hold a special place in my heart as a programmer. Mastering the JS stack while improving my knowledge of building applications in the cloud with AWS allowed me to skyrocket my career in no time. I soon took on Senior and Principal engineering roles, leading teams, and designing and creating complex applications.
 
