chore(meta): update metadata

--- a/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
+++ b/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
@@ -24,7 +24,7 @@ Even though I had decided building games was not my thing back in college, that 
 
 I’ve played an infinite number of games, but I can tell you the ones I’ve enjoyed the most are the ones I play with friends and family—multiplayer games.
 
-At that moment, everything clicked. All the games I play online: Call of Duty, FIFA, GTA, Fall Guys, Brawlhalla, etc. Thet all need A backend. Authentication, accounts, parties, player inventory—all these features need a backend system to support them.
+At that moment, everything clicked. All the games I play online: Call of Duty, FIFA, GTA, Fall Guys, Brawlhalla, etc. They all need A backend. Authentication, accounts, parties, player inventory—all these features need a backend system to support them.
 
 I didn’t think much about the offer, even though I noticed it was hard to find references about what backend in gaming was all about. So I took the risk. I quit my job and decided to join the company I work for today: Lunchbox Entertainment, a US game studio working on their first title, a MOBA game called Sirocco.
 
